Implement API foundations
